--- a/src/Components/Landing/landing.module.css
+++ b/src/Components/Landing/landing.module.css
@@ -9,7 +9,7 @@
 }
 
 .name {
-  font-size: 5rem;
+  font-size: 6rem;
   margin: .5rem;
   font-weight: bold;
   opacity: 0;
@@ -17,7 +17,7 @@
 }
 
 .job {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: bold;
   opacity: 0;
   animation: fade-in-right ease 0.4s forwards;
